bootstrap/040-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compliance
  namespace: compliance-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compliance
  template:
    metadata:
      labels:
        app: compliance
    spec:
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: compliance-pvc
        - name: chatbot-scripts
          configMap:
            name: compliance-scripts
      containers:
        - name: compliance
          image: image-registry.openshift-image-registry.svc:5000/compliance-chatbot/compliance:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: shared-storage
              mountPath: /workspace/shared-storage
